--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello Era, I love you</h1>
+    <h1>This is fun project</h1>
 </body>
 </html>
